# videogames-system-cdk-ts

./: .eslintrc  .flake8  .gitignore  .pylintrc  README.md  biome.json  cdk.json  jest.default-config.js  package-lock.json  package.json  pyproject.toml  pytype.toml  tsconfig.json
videogames-system/aws-resources/: Readme.md  package.json
videogames-system/aws-resources/cdk/: index.ts
videogames-system/aws-resources/cdk/lib/: basic-stack.stack.ts
videogames-system/aws-resources/test/: .eslintrc
videogames-system/get-ps4-users-lambda/: Readme.md  package.json
videogames-system/get-ps4-users-lambda/src/: domain.ts  handler.ts  index.ts
videogames-system/get-ps4-users-lambda/src/data/: aws-dynamodb.ts
videogames-system/get-ps4-users-lambda/test/specs/unit/: index.spec.ts
videogames-system/insert-videogame-admin-lambda/: Readme.md  package.json
videogames-system/insert-videogame-admin-lambda/src/: domain.ts  handler.ts  index.ts
videogames-system/insert-videogame-admin-lambda/src/data/: aws-dynamodb.ts
videogames-system/insert-videogame-admin-lambda/test/config/: jest.config.js  tsconfig.json
videogames-system/insert-videogame-admin-lambda/test/specs/unit/: index.spec.ts
videogames_system/aws_resources/: Readme.md
videogames_system/aws_resources/cdk/: index.py
videogames_system/aws_resources/cdk/lib/: main_stack.py
videogames_system/get_ps4_users_lambda/src/: index.py
